# code-execution-agent

./: .gitignore  main.py  pyproject.toml
notebooks/: coding_agent_tool_execution.ipynb  data_analyst_agent.ipynb  e2b_sandboxes.ipynb  sbx.cache
notebooks/utils/: coding_agent.py  ui.py  utils.py
