[project]
name = "code-execution-agent"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "e2b-code-interpreter==2.2.0",
    "gradio>=5.50.0",
    "gradio-aicontext>=0.0.6",
    "gradio-browser>=0.0.3",
    "openai>=2.8.1",
    "python-dotenv>=1.2.1",
    "tiktoken>=0.12.0",
]
